Fixed 100vh issue on tablet&mobile devices

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -24,6 +24,7 @@ body {
   background-color: var(--backgroundColor);
   width: 100%;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   position: relative;
   overflow: hidden;
 }
